Commit včetně referencovaných zdrojaků z projektu NDK